Kubernetes/6-deployment-app.yml
---
# Application deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    name: app
    tier: backend
    role: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: gcr.io/project/app
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
