Kubernetes/4-service-mongo.yml
---
# Headless service for mongo
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
    tier: backend
    role: service
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
