Kubernetes/5-service-app.yml
---
# App service
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
